tools/fleet/fixtures/packets/invalid/incomplete-fragment.case
source=valid-work.packet
mutation=remove END PROJECT PACKET
expected=invalid
